--- a/JsonParser/JsonParser/JsonParser.vcxproj.filters
+++ b/JsonParser/JsonParser/JsonParser.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="JsonDataModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JsonConsoleCommandFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="JsonCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="JsonNode.h">
@@ -87,6 +93,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="JsonDataModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="JsonConsoleCommandFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="JsonCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
